fixing the stats preview card so that it falls align with the frontend mentor card on their website

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,6 +25,7 @@ body {
   margin: auto;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
+  margin-top: 100px;
   .section-left {
     margin: auto;
     flex: 1;
@@ -83,6 +84,7 @@ body {
     }
   }
 }
+/*
 .attribution {
   font-size: 1rem;
   text-align: center;
@@ -91,6 +93,7 @@ body {
     color: hsl(228, 45%, 44%);
   }
 }
+*/
 @media (min-width: 300px) and (max-width: 1286px) {
   body {
     background-color: var(--Very-dark-blue);
